--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,38 +8,73 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
 </head>
+
 <body>
-    
+
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-warning">
+    <nav class="mynavbar navbar navbar-expand-lg bg-body-tertiary mb-3">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="./images/shopping-online-removebg-preview.png" alt="logo" class="w-25"><span class="logo-first-part">Shop</span>Hive
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-          </div>
+            <a class="navbar-brand " href="#">
+                <img src="./images/shopping-online-removebg-preview.png" alt="logo" class="logo"><span
+                    class="logo-first-part">Shop</span><span class="logo-sec-part">Hive</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto text-center">
+                    <li class="nav-item mx-5">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item mx-5">
+                        <a class="nav-link" href="#">Products</a>
+                    </li>
+                    <li class="nav-item mx-5">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <button class="btn btn-outline-success mx-5" type="submit">Login</button>
+
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
+
+    <!-- sec bar -->
+
+    <div class="container-fluid sec-bar">
+
+        <div class="row">
+            <div class="col-lg-5 col-md-5 col-sm-6 mb-3">
+
+                <select class="form-select" aria-label="Default select example" id="brand" onchange="setCountry()">
+
+                </select>
+            </div>
+
+            <div class="col-lg-5 col-md-4 col-sm-6 mb-3">
+                <select class="form-select" aria-label="Default select example" id="country">
+
+                </select>
+            </div>
+
+            <div class="upper-btns d-flex justify-content-evenly col-lg-2 col-md-3 col-sm-6 mb-3 mx-auto">
+            <div class="">
+                <button class="btn btn-success" onclick="searchProduct()">Search</button>
+            </div>
+
+            <div class="">
+                <button class="btn btn-outline-success" onclick="clearProduct()">clear</button>
+            </div>
+        </div>
 
 
-    <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
-    <script src="app.js"></script>
+        </div>
+
+
+
+        <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
+        <script src="app.js"></script>
 </body>
+
 </html>
