--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
         </div>
     </div>
 
-    <div class="container main text-center  animate__animated animate__fadeInDownBig mt-5 pt-5 animate__slower"> <br><br><br><br>
+    <div class="container main text-center "> <br><br><br><br>
 
+        <div class=" animate__animated animate__fadeInDownBig mt-5 pt-4 animate__slower">
         <span class="one">S</span>
         <span class="two">H</span>
         <span class="three">O</span>
@@ -90,7 +91,8 @@
         <span class="six">I</span>
         <span class="seven">V</span>
         <span class="eight">E</span>
-
+    </div>
+        <p style="color: white;" class="animate__animated animate__fadeInLeft animate__slower animate__delay-1s">Discover premium products handpicked just for you. <br> Shop the latest in fashion, tech, and home <br> essentials with ease and confidence.</p>
         
     </div>
 </div> <!-- first-sec -->
