grocery animation add

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
     </div>
 </div> <!-- first-sec -->
 
+<!-- Animation -->
+<img src="./images/23-Grocer.png" alt="grocery" id="grocery">
+
 <!-- second sec -->
 <h2 class="text-center my-5" style="font-size: 35px; font-family: Verdana, Geneva, Tahoma, sans-serif;">Products</h2>
 
