--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
     </div>
 </div> <!-- first-sec -->
 
+<div class="container animate-grocery">
 <!-- Animation -->
 <img src="./images/23-Grocer.png" alt="grocery" id="grocery">
+</div>
 
 <!-- second sec -->
 <h2 class="text-center my-5" style="font-size: 35px; font-family: Verdana, Geneva, Tahoma, sans-serif;">Products</h2>
