--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 </div> <!-- first-sec -->
 
-<div class="container animate-grocery">
+<div class="container-fluid animate-grocery">
 <!-- Animation -->
 <img src="./images/23-Grocer.png" alt="grocery" id="grocery">
 </div>
