--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="first-sec">
+  
     <!-- navbar -->
     <nav class="mynavbar navbar navbar-expand-lg bg-light mb-3">
         <div class="container-fluid navv">
@@ -80,7 +80,25 @@
         </div>
     </div>
 
-    <div class="container main text-center "> <br><br><br><br>
+    <div class="first-sec">
+        <div class="row g-1">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <img src="./images/main-4.png" alt="girl showing her outfit"  class="img-fluid">
+            </div>
+            <div class="col-lg-4 col-md-12 col-sm-12">
+                <div class="row">   
+                        <img src="./images/main-2.jpg" alt="girl showing her outfit" class="img-fluid">   
+                </div>
+                <div class="row">
+                    <img src="./images/main-3.jpg" alt="girl showing her outfit" class="img-fluid">
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <img src="./images/main-1.png" alt="girl showing her outfit" class="img-fluid">
+            </div>
+        </div>  
+
+    <!-- <div class="container main text-center "> <br><br><br><br>
 
         <div class=" animate__animated animate__fadeInDownBig mt-5 pt-4 animate__slower">
         <span class="one">S</span>
@@ -92,9 +110,9 @@
         <span class="seven">V</span>
         <span class="eight">E</span>
     </div>
-        <p style="color: white;" class="animate__animated animate__fadeInLeft animate__slower animate__delay-1s">Discover premium products handpicked just for you. <br> Shop the latest in fashion, tech, and home <br> essentials with ease and confidence.</p>
+        <p class="animate__animated animate__fadeInLeft animate__slower animate__delay-1s">Discover premium products handpicked just for you. <br> Shop the latest in fashion, tech, and home <br> essentials with ease and confidence.</p>
         
-    </div>
+    </div> -->
 </div> <!-- first-sec -->
 
 <div class="container-fluid animate-grocery">
