--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- Animation -->
     <div class="container-fluid animate-grocery">
         
-        <img src="./images/23-Grocer.png" alt="grocery" id="grocery">
+        <img src="./images/shopping.png" alt="grocery" id="grocery">
         </div>
 
 
