--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  
 </head>
 
 <body>
 
-  
+<!-- above navbar section -->
+
+<div class="container-fluid above-nav text-center p-2">
+    END OF SEASON SALE is live with Flat 50%-30%. Shop Now! ->
+</div>
+    
     <!-- navbar -->
     <nav class="mynavbar navbar navbar-expand-lg bg-light mb-3">
         <div class="container-fluid navv">
