--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
         </div>
     </div>
 
+<!-- whatsapp icon -->
+
+    <a href="https://web.whatsapp.com/" target="_blank">
+    <img src="./images/whatsapp.png" alt="whatsapp" id="whatsapp">
+</a>
 
     <!-- Animation -->
     <div class="container-fluid animate-grocery">
