--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                         <a class="nav-link" href="#">Products</a>
                     </li>
                     <li class="nav-item mx-5">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link animate__animated animate__flash animate__infinite animate__slower" href="#" style="color: orangered;">
+                            Sale
+                        </a>
                     </li>
                     <li class="nav-item mx-5">
                         <a class="nav-link" href="#">Contact</a>
@@ -96,7 +98,7 @@
     <div class="container-fluid animate-grocery">
         
         <img src="./images/shopping.png" alt="grocery" id="grocery">
-        </div>
+    </div>
 
 
     <div class="container-fluid first-sec">
