--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <!-- above navbar section -->
 
 <div class="container-fluid above-nav text-center p-2">
-    END OF SEASON SALE is live with Flat 50%-30%. Shop Now! ->
+    Free Delivery above the order of RS 7000 Nationwide
 </div>
-    
+<div class="combine-2-4">   
     <!-- navbar -->
     <nav class="mynavbar navbar navbar-expand-lg bg-light mb-3">
         <div class="container-fluid navv">
@@ -58,7 +58,9 @@
 
     <!-- sec bar -->
 
-    <div class="container-fluid sec-bar mb-5">
+
+
+    <div class="container-fluid sec-bar">
 
         <div class="row">
             <div class="col-lg-5 col-md-5 col-sm-6 mb-3">
@@ -94,6 +96,20 @@
     <img src="./images/whatsapp.png" alt="whatsapp" id="whatsapp">
 </a>
 
+    <div class="container-fluid  first-row" style="border-radius: 15px;">
+        <div class="container">
+        <div class="row">
+            <div class="col col-lg-8 col-md-6 col-sm-12 align-content-center landing">
+               <h1> Elevate Style, <br> Embrace Story</h1>
+               <p>we provide the largest clothing collection for any reason. You can choose trendy or classy design according to your preferences. Our services are super fast and we update within 24 hours.</p>
+            </div>
+            <div class="col col-lg-4 col-md-6 col-sm-12">
+                <img src="./images/ladies-dress-wear-6097570_1280-removebg-preview.png" alt="girl" class="landing-img">
+            </div>
+        </div>
+    </div>
+    </div>
+</div> <!-- combine 2 4 section -->
     <!-- Animation -->
     <div class="container-fluid animate-grocery">
         
