--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="container">
         <div class="row">
             <div class="col col-lg-8 col-md-6 col-sm-12 align-content-center landing">
-               <h1 class="heading my-3"> Elevate Style, </h1> <h1  class="heading mb-4"> Embrace Story</h1>
+               <h1 class="heading my-3"style="color: rgb(10, 163, 10);" > Elevate Style, </h1> <h1  class="heading mb-4"  style="color:rgb(226, 148, 4);"> Embrace Story</h1>
                <p>we provide the largest clothing collection for any reason. You can choose <br> trendy or classy design according to your preferences. Our services are <br> super fast and we update within 24 hours.</p>
             </div>
             <div class="col col-lg-4 col-md-6 col-sm-12 l-2">
