--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   
 </head>
 
@@ -102,6 +103,12 @@
             <div class="col col-lg-8 col-md-6 col-sm-12 align-content-center landing">
                <h1 class="heading my-3"style="color: rgb(10, 163, 10);" > Elevate Style, </h1> <h1  class="heading mb-4"  style="color:rgb(226, 148, 4);"> Embrace Story</h1>
                <p>we provide the largest clothing collection for any reason. You can choose <br> trendy or classy design according to your preferences. Our services are <br> super fast and we update within 24 hours.</p>
+
+               <button class="btn search d-flex justify-content-around align-items-center px-4">Explore 
+                <span class="material-symbols-outlined ms-3">
+                    arrow_right_alt
+                    </span>
+               </button>
             </div>
             <div class="col col-lg-4 col-md-6 col-sm-12 l-2">
                 <img src="./images/ladies-dress-wear-6097570_1280-removebg-preview.png" alt="girl" class="landing-img">
