--- a/index.html
+++ b/index.html
@@ -124,6 +124,25 @@
     </div>
 
 
+<!-- Sale -->
+
+<div class="container my-5 p-1">
+    <div class="row">
+
+        <h4 class="text-center">Grab Incredible Deals on Kross Kulture's Sale Special Offers</h4>
+        <p class="text-center mb-5" style="color: gray;">Flash summer clearance sale for limited duration only, enjoy flat 30% off on your favorite pieces.</p>
+        <div class="col col-lg-7 col-md-6 col-sm-12 align-content-center text-center">
+            <h3 style="font-size: 40px; color:  rgb(213, 140, 5);">Upto</h3>
+            <h1 style="font-size: 98px; color:  rgb(23, 163, 23);" class="animate__animated animate__flash animate__infinite animate__slower">30%</h1>
+            <h3 style="font-size: 40px; color:  rgb(213, 140, 5);">off</h3>
+            <h4 style="color: grey; font-style: italic;">In store & Online</h4>
+        </div>
+        <div class="col col-lg-5 col-md-6 col-sm-12">
+            <img src="./images/main-3.jpg" alt="girl outfit" class="img-fluid sale-img">
+        </div>
+    </div>
+</div>
+
     <div class="container-fluid first-sec">
         <div class="parent row text-center mx-auto">
             
